--- a/style.css
+++ b/style.css
@@ -14,26 +14,27 @@ body {
     background-size:cover;
     background-position: center;
     margin-top: 55px;
-   
 }
 
-.card { /*display card w/ name and links to <sections>*/
+/*display card w/ name and links to <sections>*/
+.card { 
     display: flex;
     background-color: rgb(245,240,231);
     border: 2px groove black;
     border-radius: 6px;
-    flex: flex;
     justify-content: center;
     align-items: center;
     height: 280px;
-    min-width: 610px;
     max-width: 610px;
     margin: 50px auto 100px auto;
     box-shadow: 16px 16px 15px rgb(31, 30, 30);
     overflow: auto;
-
+    width: 70%;
+    position: relative;
+    flex-wrap: flex;
 }
 
+/*belongs to .card*/
 #name {
     display: flex;
     justify-content: center;
@@ -42,13 +43,15 @@ body {
     padding-right: 30px;
 }
 
-.vertical { /*vertical line that divides name and links in .card (display card)*/
+/*vertical line that divides name and links in .card (display card)*/
+.vertical { 
     border: 1px solid black;
     height: 190px;
-    position: absolute;
+    position: relative;
 }
 
-.buttons { /* lead to different <sections>*/
+/* lead to different <sections> aka cards*/
+.buttons { 
     font-size: 25px;
     text-decoration: underline;
     display: block;
@@ -62,26 +65,24 @@ body {
 
 a { /*switches .buttons in .card from blue*/
     color: black; 
-    
 }
 
-
-.card2 { /*"About Me" card*/ 
+/*About Me card*/ 
+.card2 { 
     font-size: 21px;
     background-color: rgb(245, 240, 231);
     border: 2px groove black;
     border-radius: 6px;
     display: flex;
     justify-content: space-evenly;
-    width: 100%;
-    min-width: 1090px;
+    width: 80%;
     max-width: 1090px;
     height: 625px;
     margin: 100px auto 100px auto;
     box-shadow: 16px 16px 15px rgb(31, 30, 30);
     overflow: auto;
     position: relative;
-    
+    flex-wrap: wrap;
 }
 
 #aboutMe {
@@ -91,10 +92,9 @@ a { /*switches .buttons in .card from blue*/
 }
 
 .info {
-    margin-top:140px ;  
-    
+    margin-top:140px ; 
 }
-
+/*belongs to card2*/
 #profilePic img {
     display: flex;
     height: 400px;
@@ -104,24 +104,23 @@ a { /*switches .buttons in .card from blue*/
     align-self: center;
     float: left;
     margin: 120px auto auto 15px;
-    
+    width: 90%;
 }
 
+/*portfolio card*/
 .card3 { 
-    /*portfolio card*/
     font-size: 20px;
     display: relative;
     background-color: rgb(245, 240, 231);
     border: 2px groove black;
     border-radius: 6px;
     height: 700px;
-    min-width: 1000px;
     max-width: 1000px;
     margin: 100px auto 100px auto;
     box-shadow: 16px 16px 15px rgb(31, 30, 30);
     overflow: auto;
     padding: 15px;
-    
+    width: 70%;
 }
 
 #catalog { 
@@ -129,12 +128,19 @@ a { /*switches .buttons in .card from blue*/
     text-align: center;
 }
 
-/* containers for the image links in the portfolio section*/
+.picLinks {
+    margin-left: 6%;
+    align-self:center;
+
+}
+
+/* containers for the image links in the portfolio section of card3*/
 .container1, .container2, .container3, .container4,
 .container5,.container6, .container7,.container8 {
     display: flex;
     height: 230px;
     width: 20%;
+    min-width: 160px ;
     box-sizing: border-box;
     object-fit: fill;
     margin: 15px 15px 15px 15px;
@@ -145,7 +151,8 @@ a { /*switches .buttons in .card from blue*/
 
 .container1 img, .container2 img, .container3 img, .container4 img, 
 .container5 img,.container6 img, .container7 img, .container8 img {
-    overflow: hidden;
+    display: flex;
+    overflow: auto;
     width: 100%;
     height: 100%;
     border-radius: 8px;
@@ -153,10 +160,10 @@ a { /*switches .buttons in .card from blue*/
     border: 1px solid black;
 }
 
-/* */
+/* image texts over picture links in card3 */
 .content1, .content2, .content3, .content4, 
 .content5, .content6, .content7, .content8 {
-    overflow: hidden;
+    overflow: auto;
     border-radius: 0px 0px 8px 8px;
     font-size: smaller;
     position: absolute;
@@ -174,36 +181,59 @@ a { /*switches .buttons in .card from blue*/
     box-shadow: 0 0 18px rgba(0, 0, 0, 2.75);
 }
 
-
-.card4 {
-    
-    min-width: 500px;
+/*contact info card*/
+.card4 { 
     max-width: 500px;
     height: 240px;
     background-color: rgb(245, 240, 231);
     border: 2px groove black;
     border-radius: 6px;
     display: flex;
-    
     justify-content: space-evenly;
     margin: 70px auto 70px auto;
     box-shadow: 16px 16px 15px rgb(31, 30, 30);
     overflow: auto;
     position: relative;
+    width: 70%;
 
 }
 
-#contactCard {
+/*Contact header (.card4)*/
+#contactCard { 
     font-size: 25px;
     margin: auto;
-    
     position: absolute ;
 }
 
-#contactInfo {
-    margin: 73px auto;
+/*child.card4*/
+#contactInfo { 
+    margin: 73px 2%;
     font-size: 22px;
-    
 }
+
+
+
+@media screen and (max-width: 1228px) and (min-width: 0px) {
+    /*deletes vert line on lead card*/  
+    div.vertical{ 
+    display:none;
+    /*lead card stacks to prevent horizontal scrolling on smaller screens*/
+}   div.card{ 
+    flex-direction: column;
+    height: 285px;
+    padding-top: 15px;
+    text-align: justify;
+}   div#name{
+    padding-left: 10%;
+    /*info on the about me section*/}   
+    p.info{ 
+    padding-left: 10px;
+    margin-top: 20px;
+}   
+
+}
+
+
+
 
 
